CI: tam takım artık her PR'da koşuyor (deponun ilk işi)
Bu depoda hiçbir şey otomatik doğrulanmıyordu; CLAUDE.md bunu "No CI exists"
diye yazıyordu. 353 test var ve hepsi elle koşuluyordu.

İş, CLAUDE.md'deki "Building on a modern JDK" reçetesini BİREBİR kullanıyor.
Üç ayarın hiçbiri kozmetik değil, üçü de ölçülerek bulunmuştu:

  UTF-8            lite/i18n/tr/ Türkçe adlı sınıf dosyaları üretiyor
                   (res$AydınlıkBD.class); UTF-8 olmayan charset'te zinc
                   InvalidPathException ile ölüyor
  sbt.sh DEĞİL     o betik -XX:+CMSClassUnloadingEnabled veriyor, Java 14+
                   o bayrakla hiç başlamıyor. Bayrak Java 8 hedefi için
                   doğru -- sbt.sh'a dokunulmadı, burada launcher jar'ı
                   doğrudan çağrılıyor
  --add-opens      cglib/jmock tabanlı takımlar Java 9+ altında bunsuz
                   düşüyor

Ayrıca xvfb: TestEnv gerçek Swing/Piccolo nesneleri kuruyor, headless kip yok.

Scala araç zinciri Maven'dan gelmiyor (scalaHome depodaki yamalı jarlara
sabit), yani indirilecek bir şey yok. Maven bağımlılıkları için önbellek var.

Java 21 seçildi çünkü ölçülen reçete bu. Yapının HEDEFİ Java 8 ve runtime
8-21 destekliyor; 8 ile koşum denenmedi, o yüzden ölçülmüş olan koşuluyor.

İşin komutunu yerelde birebir koşturdum: 353/353, 0 hata.

CLAUDE.md'de iki not tazelendi: "No CI exists" maddesi gerçeğe göre
yeniden yazıldı (yalnız test işi var; paketleme ve install4j hâlâ
doğrulanmıyor), ve reçetedeki "334 test" sayısı 353 oldu.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MneaxTXqDCvqsixXR55KXR